--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -48,11 +48,36 @@
 
 
 .btn {
+    position: relative;
+    overflow: hidden;
     background: white;
     margin: 1rem 0;
     padding: 0.75rem 1.5rem;
     border: none;
     border-radius: 2rem;
+}
+
+.btn::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(3, 238, 247, 0.3) 100%, transparent 50%);
+    opacity: 0;
+    border-radius: inherit;
+    animation: glow 1s infinite alternate;
+}
+
+@keyframes glow {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 .btnImg {
