--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -27,8 +27,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
-    width: 100vw;
+   
+    width: 100%;
     max-width: 65rem;
 }
 
@@ -37,6 +37,12 @@
     height: 20rem;
     margin: 0.5rem;
     border-radius: 8px;
+}
+.worksImg:hover {
+
+    transform: scale(1.04);
+    transition: transform 0.5s ease-in-out;
+   
 }
 
 .workBtn {
